<resources>

    <string name="app_name">Self Health</string>
    <string name="example_gmail">example@gmail.com</string>
    <string name="password">********</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="fullname">Full Name</string>
    <string name="dob">Date of Birth</string>
    <string name="gender">Gender</string>
    <string name="address">Address</string>
    <string name="complaint">Pain Complaint</string>
    <string name="room">Room</string>
    <string name="reserve">Reserve</string>
    <string name="get_the_best_healthcare">Get the best healthcare</string>
    <string name="hospital_name">Nama Rumah Sakit</string>
    <string name="detail">Alamat</string>
    <string name="city">Kota</string>
    <string name="title_activity_maps">MapsActivity</string>
</resources>