<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_bg"
    android:padding="16dp"
    android:elevation="10dp"
    android:layout_marginHorizontal="25dp"
    android:layout_marginVertical="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/text_nama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:fontFamily="@font/poppins_semibold"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            tools:text="@string/hospital_name" />
        <TextView
            android:id="@+id/text_alamat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:textColor="@color/teal_700"
            android:ellipsize="end"
            android:maxLines="2"
            tools:text="@string/detail" />
        <TextView
            android:id="@+id/text_kota"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:textColor="@color/teal_700"
            android:ellipsize="end"
            android:maxLines="2"
            tools:text="@string/city"/>
    </LinearLayout>

</LinearLayout>