<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_vertical"
    android:background="@color/whiteHealth"
    tools:context=".RoomActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="15dp"
        android:layout_marginHorizontal="15dp"
        android:layout_marginBottom="5dp"
        android:padding="15dp">

        <TextView
            android:id="@+id/nama_rs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Self Health"
            app:layout_constraintTop_toTopOf="parent"
            android:textColor="@color/blueHealth"
            android:textSize="20dp"
            android:fontFamily="@font/poppins_semibold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Get the best service"
            app:layout_constraintTop_toTopOf="parent"
            android:textColor="@color/darkHealth"
            android:fontFamily="@font/poppins_medium"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginVertical="10dp"
        android:background="@drawable/rounded_bg"
        android:elevation="10dp"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Patient Registration"
            app:layout_constraintTop_toTopOf="parent"
            android:textColor="@color/darkHealth"
            android:textSize="15sp"
            android:paddingVertical="10dp"
            android:paddingHorizontal="10dp"
            android:fontFamily="@font/poppins_semibold"/>

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:hint="@string/fullname"
            android:paddingHorizontal="20dp"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:textColorHint="@color/darkHealth"
            android:background="@drawable/rounded_bg_gray"
            android:fontFamily="@font/poppins"/>

        <EditText
            android:id="@+id/born"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:hint="@string/dob"
            android:paddingHorizontal="20dp"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:textColorHint="@color/darkHealth"
            android:background="@drawable/rounded_bg_gray"
            android:fontFamily="@font/poppins"/>

        <EditText
            android:id="@+id/gender"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:hint="@string/gender"
            android:paddingHorizontal="20dp"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:textColorHint="@color/darkHealth"
            android:background="@drawable/rounded_bg_gray"
            android:fontFamily="@font/poppins"/>

        <EditText
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:hint="@string/address"
            android:paddingHorizontal="20dp"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:textColorHint="@color/darkHealth"
            android:background="@drawable/rounded_bg_gray"
            android:fontFamily="@font/poppins"/>

        <EditText
            android:id="@+id/complaint"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:hint="@string/complaint"
            android:paddingHorizontal="20dp"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:textColorHint="@color/darkHealth"
            android:background="@drawable/rounded_bg_gray"
            android:fontFamily="@font/poppins"/>

        <EditText
            android:id="@+id/room"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:hint="@string/room"
            android:paddingHorizontal="20dp"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:textColorHint="@color/darkHealth"
            android:background="@drawable/rounded_bg_gray"
            android:fontFamily="@font/poppins"/>

    </LinearLayout>

    <Button
        android:id="@+id/send"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="SEND"
        android:elevation="5dp"
        android:textSize="15sp"
        android:textColor="@color/whiteHealth"
        android:background="@drawable/rounded_bg_blue"
        android:fontFamily="@font/poppins_semibold"
        android:layout_marginTop="15dp"
        android:layout_marginHorizontal="15dp"
        android:layout_marginBottom="5dp"
        android:padding="15dp" />

    <TextView
        android:id="@+id/buttonBack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Back"
        android:elevation="5dp"
        android:textColor="@color/darkHealth"
        android:fontFamily="@font/poppins_medium"
        android:textAlignment="center"
        android:layout_marginTop="5dp"
        android:layout_marginHorizontal="15dp"
        android:layout_marginBottom="5dp"
        android:padding="15dp" />

</LinearLayout>